<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_start"
    tools:context=".StartActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="25dp"
        android:text="@string/gameTitle"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_margin="50dp"
        android:textSize="20sp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:padding="5dp"
        android:textSize="32sp"
        android:textColor="#FFFFFF"
        android:background="#88000000"
        android:textCursorDrawable= "@null"
        android:inputType="text"
        android:id="@+id/nameInput"
        android:hint="@string/name"
        android:textColorHint="#88FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button

        android:id="@+id/button"
        android:textSize="48sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/play"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@android:color/transparent"
        android:textColor="#FFFFFF"

        />

</androidx.constraintlayout.widget.ConstraintLayout>